--- a/categories.html
+++ b/categories.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categories</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div  class="max-sm:hidden relative isolate flex items-center gap-x-6 overflow-hidden bg-gray-800 px-6 py-3.5 sm:px-2.5 sm:before:flex-1 ">
@@ -85,16 +87,19 @@
           <a href="index.html" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:text-blue-500" aria-current="page">Acceuil</a>
         </li>
         <li>
-          <a href="histoire.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:hover:text-blue-500 text-white hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Histoire</a>
+          <a href="histoire.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:hover:text-blue-500 text-white hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Usine</a>
+        </li>
+        <li>
+          <a href="valeurs.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Valeurs</a>
         </li>
         <li>
           <a href="produit.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Produit</a>
         </li>
         <li>
-          <a href="categories.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Categories</a>
+          <a href="categories.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Gammes</a>
         </li>
         <li>
-          <a href="valeurs.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Valeurs</a>
+          <a href="Frange.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Franges & Bobines</a>
         </li>
         <li>
           <a href="contact.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Contactez-nous</a>
@@ -104,7 +109,48 @@
   </div>
 </nav>
 <main>
+  <div class="justify-center flex text-center pt-10">
+    <h1 class="font-bold text-[44px] max-sm:text-2xl font-mono">Nos Categories</h1>
+  </div>
+<!-- component -->
+<div class="flex justify-center items-center">
+  <div class="2xl:mx-auto py-12 2xl:container px-4 sm:px-6 xl:px-20 2xl:px-0 w-full">
+    <div class="flex flex-col jusitfy-center items-center space-y-10">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 md:gap-x-4 md:gap-x-8 w-full">
+        <div class="relative group flex justify-center items-center h-full w-full">
+          <img class="object-center object-cover h-full w-full" src="assets/a3.webp" alt="image" />
+          <button class="bg-gray-800 text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium border border-gray-900 rounded-full border-2 leading-none text-gray-800 py-3 w-36 bg-white">Margoum</button>
+        </div>
 
+        <div class="flex flex-col space-y-4 md:space-y-8 mt-4 md:mt-0">
+          <div class="relative group flex justify-center items-center h-full w-full">
+            <img class="object-center object-cover h-full w-full" src="assets/a4.webp" alt="shoe-image" />
+            <button class="bg-gray-800 text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium border border-gray-900 rounded-full border-2 leading-none text-gray-800 py-3 w-36 bg-white">Sajjad</button>
+          </div>
+          <div class="relative group flex justify-center items-center h-full w-full">
+            <img class="object-center object-cover h-full w-full" src="assets/a2.webp" alt="watch-image" />
+            <button class="bg-gray-800 text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium border border-gray-900 rounded-full border-2 leading-none text-gray-800 py-3 w-36 bg-white">Traditionel</button>
+          </div>
+        </div>
+
+        <div class="relative group justify-center items-center h-full w-full hidden lg:flex">
+          <img class="object-center object-cover h-full w-full" src="assets/a.jpg" alt="girl-image" />
+          <button class="bg-gray-800 text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium border border-gray-900 rounded-full border-2 leading-none text-gray-800 py-3 w-36 bg-white">Moderne</button>
+        </div>
+        <div class="relative group flex justify-center items-center h-full w-full mt-4 md:hidden md:mt-8 lg:hidden">
+          <img class="object-center object-cover h-full w-full hidden md:block" src="assets/a.jpg" alt="girl-image" />
+          <img class="object-center object-cover h-full w-full md:hidden" src="assets/a.jpg" alt="olive-tatiane-Im-Ez-F9-B91-Mk-unsplash-2" />
+          <button class="bg-gray-800 text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium border border-gray-900 rounded-full border-2 leading-none text-gray-800 py-3 w-36 bg-white">Accessories</button>
+        </div>
+      </div>
+      <div class="relative group hidden md:flex justify-center items-center h-full w-full mt-4 md:mt-8 lg:hidden">
+        <img class="object-center object-cover h-full w-full hidden md:block" src="assets/111.jpg" alt="girl-image" />
+        <img class="object-center object-cover h-full w-full sm:hidden" src="https://i.ibb.co/sQgHwHn/olive-tatiane-Im-Ez-F9-B91-Mk-unsplash-1.png" alt="olive-tatiane-Im-Ez-F9-B91-Mk-unsplash-2" />
+        <button class="bg-gray-800 text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium border border-gray-900 rounded-full border-2 leading-none text-gray-800 py-3 w-36 bg-white">Accessories</button>
+      </div>
+    </div>
+  </div>
+</div>
 </main>
 <footer class="bg-gray-900 max-sm:px-12">
   
