--- a/histoire.html
+++ b/histoire.html
@@ -6,7 +6,6 @@
     <title>Histoire</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 <body>
     <div  class="max-sm:hidden relative isolate flex items-center gap-x-6 overflow-hidden bg-gray-800 px-6 py-3.5 sm:px-2.5 sm:before:flex-1 ">
@@ -88,16 +87,19 @@
           <a href="index.html" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:text-blue-500" aria-current="page">Acceuil</a>
         </li>
         <li>
-          <a href="histoire.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:hover:text-blue-500 text-white hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Histoire</a>
+          <a href="histoire.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:hover:text-blue-500 text-white hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Usine</a>
+        </li>
+        <li>
+          <a href="valeurs.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Valeurs</a>
         </li>
         <li>
           <a href="produit.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Produit</a>
         </li>
         <li>
-          <a href="Frange.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Franges & Bobines</a>
+          <a href="categories.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Gammes</a>
         </li>
         <li>
-          <a href="valeurs.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Valeurs</a>
+          <a href="Frange.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Franges & Bobines</a>
         </li>
         <li>
           <a href="contact.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Contactez-nous</a>
@@ -107,8 +109,190 @@
   </div>
 </nav>
 <main>
+  <!-- Banner -->
+    <div class="relative overflow-hidden rounded-lg lg:h-[400px] max-sm:h-56">
+        <img src="assets/slider8.jpg" class="absolute block  -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 inset-0 w-full h-full object-cover object-center opacity-70" alt="...">
+        <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-top drop-shadow-2xl">
+          <p class="font-mono font-bold lg:text-[100px] max-sm:text-[42px] text-center">Usine</p>
+        </div>
+    </div>
+    <!-- End Banner -->
+
+    <div class="grid grid-cols-2 gap-4 lg:px-52 lg:pt-12 max-sm:block max-sm:pt-8">
+      <div class="px-4 py-12 max-sm:py-4">
+        <img src="assets/2.jpg" alt="img">
+      </div>
+      <div class="p-12">
+        <h1 class="text-2xl font-mono font-bold text-left text-center pb-4">. Usine STIT .</h1>
+        <h4 class="font-mono text-2xl text-left text-center pb-4">Relookez votre sol avec un tapis <br>pas comme les autres !</h4>
+        <p class="text-center pt-4 lg:text-2xl text-gray-700">Nous vous révélons d’ores et déjà les tendances de demain. Nos tapis sont toujours à la pointe de l’innovation et apportent une touche exceptionnelle à votre intérieur. Différents styles et model de rouleaux vous procurent les dernières innovations dans le monde des tapis et vous serez toujours à l’avant-garde en termes d’intérieurs tendance. Avec une large expertise, un savoir-faire irréprochable, et doté de matériels de dernières innovations, notre équipe veille, sans cesse à optimiser la qualité tout au long du processus de fabrication.</p>
+       <div class="row">
+        <div class="grid grid-cols-3 py-12 text-center">
+          <div class="block">
+            <i class="fa-solid fa-puzzle-piece text-yellow-500 fa-2xl"></i>
+            <p class="text-md py-4 ">Par Piéce</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-text-width text-blue-500 fa-2xl"></i>
+            <p class="text-md py-4 ">Par Métrage</p>
+          </div>
+          <div>
+            <i class="fa-brands fa-wpforms text-red-500 fa-2xl"></i>
+            <p class="text-md py-4 ">Par Forme</p>
+          </div>
+        </div>
+       </div>
+      </div>
+    </div>
+
+ <hr class="pb-8">
+
+<div class="grid grid-cols-2 gap-4 lg:px-52 max-sm:block"> 
+    <div class="px-4 py-12 max-sm:py-4">
+      <img src="assets/sf.jpg" alt="img">
+    </div>
+<div class="px-12 py-12">
+      <div class="justify-center flex text-center pb-10">
+        <h1 class="font-bold mb-2 text-2xl max-sm:text-2xl font-mono">. Par Piéce .</h1>
+      </div>
+        <p class="text-center font-mono text-xl pb-8">Trouver le bon tapis pour une pièce est un souci majeur, chez STIT nous vous proposons un large choix de tapis adapté à vos coins et selon vos désirs :</p>
+  <div class="grid block gap-5">
+      <ul class="mx-8">
+          <li class="flex gap-2">
+            <i class="fa-solid fa-arrow-right pt-2 text-yellow-500"></i>
+            <p class="lg:text-xl lg:pb-4 pb-2">Tapis Salon</p>
+          </li>
+          <li class="flex gap-2">
+            <i class="fa-solid fa-arrow-right pt-2 text-yellow-500"></i>
+            <p class="lg:text-xl lg:pb-4 pb-2">Tapis d’entrée</p>
+          </li>
+          <li class="flex gap-2">
+            <i class="fa-solid fa-arrow-right pt-2 text-yellow-500"></i>
+            <p class="lg:text-xl lg:pb-4 pb-2">Tapis couloir et des cuisines</p>
+          </li>
+          <li class="flex gap-2">
+            <i class="fa-solid fa-arrow-right pt-2 text-yellow-500"></i>
+            <p class="lg:text-xl lg:pb-4 pb-2">Tapis chambre et bureau</p>
+          </li>
+          <li class="flex gap-2">
+            <i class="fa-solid fa-arrow-right pt-2 text-yellow-500"></i>
+            <p class=" lg:text-xl lg:pb-4 pb-2">Tapis pour salle des fêtes, des congres et hôtel</p>
+          </li>
+          <li class="flex gap-2">
+            <i class="fa-solid fa-arrow-right pt-2 text-yellow-500"></i>
+            <p class="lg:text-xl lg:pb-4 pb-2">Tapis pour mosquée</p>
+          </li>
+      </ul>
+    </div>
+  </div>
+</div>
+<!--  -->
+<hr class="mt-4">
+
+<div class="grid grid-cols-2 gap-4 lg:px-52 max-sm:block">
+
+  <div class="justify-center flex text-center pt-10 lg:hidden">
+    <h1 class="font-bold mb-2 text-2xl max-sm:text-2xl font-mono">. Par Forme .</h1>
+  </div> 
+
+  <div class="max-sm:px-8 py-12 max-sm:py-4 lg:px-36 lg:hidden">
+    <img src="assets/rond.jpg" alt="img">
+  </div>
+
+<div class="px-12 py-12">
+    <div class="justify-center flex text-center pb-10 max-sm:hidden">
+      <h1 class="font-bold mb-2 text-2xl max-sm:text-2xl font-mono">. Par Forme .</h1>
+    </div>
+      <p class="text-center font-mono text-xl pb-8">Trouver le bon tapis pour une pièce est un souci majeur, chez STIT nous vous proposons un large choix de tapis adapté à vos coins et selon vos désirs :</p>
+  <div class="grid block gap-5">
+    <ul class="mx-8">
+        <li class="flex gap-2">
+          <i class="fa-solid fa-arrow-right pt-2 text-yellow-500"></i>
+          <p class="lg:text-xl lg:pb-4 pb-2">Tapis rectangulaire</p>
+        </li>
+        <li class="flex gap-2">
+          <i class="fa-solid fa-arrow-right pt-2 text-yellow-500"></i>
+          <p class="lg:text-xl lg:pb-4 pb-2">Tapis Rond</p>
+        </li>
+        <li class="flex gap-2">
+          <i class="fa-solid fa-arrow-right pt-2 text-yellow-500"></i>
+          <p class="lg:text-xl lg:pb-4 pb-2">Tapis Ovale</p>
+        </li>
+    </ul>
+  </div>
+</div>
+<div class="max-sm:px-8 py-12 max-sm:py-4 lg:px-48 max-sm:hidden">
+  <img src="assets/rond.jpg" alt="img">
+</div>
+</div>
+<!--  -->
+<hr>
+<div class="grid grid-cols-2 gap-4 lg:px-52 max-sm:block"> 
+  <div class="px-4 py-12 max-sm:py-8">
+    <img src="assets/sb.jpg" alt="img">
+  </div>
+<div class="lg:px-12 max-sm:px-4 py-12">
+    <div class="justify-center flex text-center pb-10">
+      <h1 class="font-bold mb-2 text-2xl max-sm:text-2xl font-mono">. Par Métrage .</h1>
+    </div>
+      <p class="text-center font-mono text-xl pb-4">Afin de créer un endroit harmonieux et chaleureux, STIT vous propose diverses dimensions standards de tapis .</p>
+      <div class="space-y-8 space-x-3 text-center max-sm:hidden">
+        <button class="border border-2 rounded-lg border-gray-900 p-2 font-mono">160 x 210</button>
+        <button class="border border-2 rounded-lg border-gray-900 p-2 font-mono">160 x 220</button>
+        <button class="border border-2 rounded-lg border-gray-900 p-2 font-mono">160 x 260</button>
+        <button class="border border-2 rounded-lg border-gray-900 p-2 font-mono">200 x 260</button>
+        <button class="border border-2 rounded-lg border-gray-900 p-2 font-mono">200 x 270</button>
+        <button class="border border-2 rounded-lg border-gray-900 p-2 font-mono">240 x 350</button>
+        <button class="border border-2 rounded-lg border-gray-900 p-2 font-mono">100 x 300</button>
+        <button class="border border-2 rounded-lg border-gray-900 p-2 font-mono">100 x 400</button>
+        <button class="border border-2 rounded-lg border-gray-900 p-2 font-mono">100 x 500</button>
+        <button class="border border-2 rounded-lg border-gray-900 p-2 font-mono">100 x 2500</button>
+        <button class="border border-2 rounded-lg border-gray-900 p-2 font-mono">100 x 3000</button>
+        <button class="border border-2 rounded-lg border-gray-900 p-2 font-mono">120 x 170</button>
+        <button class="border border-2 rounded-lg border-gray-900 p-2 font-mono">120 x 180</button>
+        <button class="border border-2 rounded-lg border-gray-900 p-2 font-mono lg:hidden">130 x 130</button>
+        <button class="border border-2 rounded-lg border-gray-900 p-2 font-mono">150 x 150</button>
+        <button class="border border-2 rounded-lg border-gray-900 p-2 font-mono">150 x 210</button>
+      </div>
+      <div class="space-y-8 space-x-3 text-center lg:hidden">
+        <div class="row">
+          <div class="grid grid-cols-3">
+
+          </div>
+        </div>
+        <div class="row">
+          <div class="grid grid-cols-3 gap-2 mr-2">
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">160 x 210</button>
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">160 x 220</button>
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">160 x 260</button>
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">200 x 260</button>
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">200 x 270</button>
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">240 x 350</button>
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">100 x 300</button>
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">100 x 400</button>
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">100 x 500</button>
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">100 x 1500</button>
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">100 x 2500</button>
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">100 x 3000</button>
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">120 x 170</button>
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">120 x 180</button>
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">130 x 130</button>
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">150 x 150</button>
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">150 x 210</button>
+            <button class="border border-2 rounded-lg border-gray-900 p-2 font-xs">150 x 260</button>
+
+          </div>
+</div>
+</div>
+
+
+
+
+
+
 
 </main>
+<!-- Footer -->
 <footer class="bg-gray-900 max-sm:px-12">
   
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
