--- a/index.html
+++ b/index.html
@@ -103,16 +103,19 @@
           <a href="index.html" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:text-blue-500" aria-current="page">Acceuil</a>
         </li>
         <li>
-          <a href="histoire.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:hover:text-blue-500 text-white hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Histoire</a>
+          <a href="histoire.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:hover:text-blue-500 text-white hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Usine</a>
+        </li>
+        <li>
+          <a href="valeurs.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Valeurs</a>
         </li>
         <li>
           <a href="produit.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Produit</a>
         </li>
         <li>
-          <a href="Frange.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Franges & Bobines</a>
+          <a href="categories.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Gammes</a>
         </li>
         <li>
-          <a href="valeurs.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Valeurs</a>
+          <a href="Frange.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Franges & Bobines</a>
         </li>
         <li>
           <a href="contact.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Contactez-nous</a>
@@ -175,7 +178,7 @@
 
 <div class="justify-center flex text-center p-16">
  <div>
-  <h1 class="font-bold mb-4 text-[44px] max-sm:text-xl font-mono">BIENVENUE CHEZ S.T.I.T</h1>
+  <h1 class="font-bold mb-4 text-[44px] max-sm:text-2xl font-mono">BIENVENUE CHEZ S.T.I.T</h1>
   <p class="text-gray-900 text-center w-[700px] max-sm:w-[320px] max-sm:text-xs text-md font-mono">
     La Société Tunisienne spécialisée dans la fabrication des tapis
     Avec une équipe hautement qualifiée, STIT vous propose un savant mélange de tradition, d’artisanat et de fabrication industrielle Tunisienne, avec un souci constant du détail et de la qualité optimale.
@@ -190,7 +193,7 @@
 </div>
 
   <div class="justify-center flex text-center pb-10">
-    <h1 class="font-bold mb-4 text-[44px] max-sm:text-xl font-mono">Nos Services</h1>
+    <h1 class="font-bold mb-4 text-[44px] max-sm:text-2xl font-mono">Nos Services</h1>
   </div>
   <div class="flex justify-center justify-between lg:px-36 py-4 max-sm:block max-sm:w-auto max-sm:px-8">
     <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow  border-gray-700 max-sm:mb-4">
@@ -307,7 +310,7 @@
 
 
     <div class="justify-center flex text-center pb-10 mt-12">
-      <h1 class="font-bold mb-4 text-[44px] max-sm:text-xl font-mono">Franges</h1>
+      <h1 class="font-bold mb-4 text-[44px] max-sm:text-2xl font-mono">Franges</h1>
     </div>
       <div class="grid grid-cols-2 gap-8 lg:mt-12 max-sm:block">
         <div class="lg:pl-36 max-sm:px-12 inset-0 w-full h-full object-cover object-center">
