--- a/categories.html
+++ b/categories.html
@@ -109,11 +109,15 @@
   </div>
 </nav>
 <main>
+  <div class="relative overflow-hidden rounded-lg lg:h-[400px] max-sm:h-56">
+    <img src="assets/slider00.jpg" class="absolute block  -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 inset-0 w-full h-full object-fit object-top " alt="...">
+</div>
+
   <div class="justify-center flex text-center pt-10">
-    <h1 class="font-bold text-[44px] max-sm:text-2xl font-mono">Nos Categories</h1>
+    <h1 class="font-bold text-[44px] max-sm:text-2xl font-mono">Nos Gammes</h1>
   </div>
 <!-- component -->
-<div class="flex justify-center items-center">
+<div class="flex justify-center items-center pb-10">
   <div class="2xl:mx-auto py-12 2xl:container px-4 sm:px-6 xl:px-20 2xl:px-0 w-full">
     <div class="flex flex-col jusitfy-center items-center space-y-10">
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 md:gap-x-4 md:gap-x-8 w-full">
@@ -129,18 +133,18 @@
           </div>
           <div class="relative group flex justify-center items-center h-full w-full">
             <img class="object-center object-cover h-full w-full" src="assets/a2.webp" alt="watch-image" />
-            <button class="bg-gray-800 text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium border border-gray-900 rounded-full border-2 leading-none text-gray-800 py-3 w-36 bg-white">Traditionel</button>
+            <button class="bg-gray-800 text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium border border-gray-900 rounded-full border-2 leading-none text-gray-800 py-3 w-36 bg-white">Traditionnel</button>
           </div>
         </div>
 
         <div class="relative group justify-center items-center h-full w-full hidden lg:flex">
           <img class="object-center object-cover h-full w-full" src="assets/a.jpg" alt="girl-image" />
-          <button class="bg-gray-800 text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium border border-gray-900 rounded-full border-2 leading-none text-gray-800 py-3 w-36 bg-white">Moderne</button>
+          <button class="bg-gray-800 text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium border border-gray-900 rounded-full border-2 leading-none text-gray-800 py-3 w-36 bg-white">Tapis Chambre</button>
         </div>
         <div class="relative group flex justify-center items-center h-full w-full mt-4 md:hidden md:mt-8 lg:hidden">
           <img class="object-center object-cover h-full w-full hidden md:block" src="assets/a.jpg" alt="girl-image" />
           <img class="object-center object-cover h-full w-full md:hidden" src="assets/a.jpg" alt="olive-tatiane-Im-Ez-F9-B91-Mk-unsplash-2" />
-          <button class="bg-gray-800 text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium border border-gray-900 rounded-full border-2 leading-none text-gray-800 py-3 w-36 bg-white">Accessories</button>
+          <button class="bg-gray-800 text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium border border-gray-900 rounded-full border-2 leading-none text-gray-800 py-3 w-36 bg-white">Tapis Sallon</button>
         </div>
       </div>
       <div class="relative group hidden md:flex justify-center items-center h-full w-full mt-4 md:mt-8 lg:hidden">
