--- a/index.html
+++ b/index.html
@@ -177,19 +177,19 @@
 </div>
 
 <div class="justify-center flex text-center p-16">
- <div>
+ <div class="grid block">
   <h1 class="font-bold mb-4 text-[44px] max-sm:text-2xl font-mono">BIENVENUE CHEZ S.T.I.T</h1>
-  <p class="text-gray-900 text-center w-[700px] max-sm:w-[320px] max-sm:text-xs text-md font-mono">
+  <p class="text-gray-900 text-center w-[700px] max-sm:w-[320px] max-sm:text-xs text-md font-mono pb-4">
     La Société Tunisienne spécialisée dans la fabrication des tapis
     Avec une équipe hautement qualifiée, STIT vous propose un savant mélange de tradition, d’artisanat et de fabrication industrielle Tunisienne, avec un souci constant du détail et de la qualité optimale.
-    
-    Moderne
-    Nous vous accompagnons dans l’élaboration de vos projets sur-mesure afin de donner corps à votre inspiration : du dessin à la sélection des matières et des couleurs, de la forme (rectangulaire, ovale ou ronde), à la pose …
-    
-    Creative
-    Quelle que soit l’envie qui vous anime, quel que soit l’univers graphique qui vous touche, le style que vous préférez, nous saurons répondre à vos attentes et vous offrons l’opportunité de puiser dans nos incroyables dessins, motifs et styles originaux, interprétables à souhait.
   </p>
- </div>
+  <i class="fa-solid fa-feather-pointed"></i>
+  <h4 class="font-bold font-mono ">Moderne:</h4>
+  <p class="text-gray-900 text-center w-[700px] max-sm:w-[320px] max-sm:text-xs text-md font-mono pb-4">Nous vous accompagnons dans l’élaboration de vos projets sur-mesure afin de donner corps à votre inspiration : du dessin à la sélection des matières et des couleurs, de la forme (rectangulaire, ovale ou ronde), à la pose …</p>
+  <i class="fa-regular fa-lightbulb"></i>
+  <h4 class="font-bold font-mono">Creative:</h4>
+ <p class="text-gray-900 text-center w-[700px] max-sm:w-[320px] max-sm:text-xs text-md font-mono">Quelle que soit l’envie qui vous anime, quel que soit l’univers graphique qui vous touche, le style que vous préférez, nous saurons répondre à vos attentes et vous offrons l’opportunité de puiser dans nos incroyables dessins, motifs et styles originaux, interprétables à souhait.</p>
+</div>
 </div>
 
   <div class="justify-center flex text-center pb-10">
@@ -290,7 +290,7 @@
             <div class="mt-4 sm:mt-6">
               <a
                 class="inline-block px-5 py-3 rounded-lg uppercase tracking-wider font-semibold text-sm text-white shadow-lg sm:text-base hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 bg-blue-500 hover:bg-blue-700 focus:ring-blue-800"
-                href="#"
+                href="histoire.html"
               >
                 Voir Plus
               </a>
@@ -318,7 +318,7 @@
         </div>
         <div>
           <div class="row lg:pr-12 max-sm:pt-8">
-            <h1 class="lg:text-[36px] max-sm:text-[24px] text-center font-bold font-mono">Oriental & Tapis Synthétique Frange Dos</h1>
+            <h1 class="lg:text-[36px] max-sm:text-[24px] text-center font-bold font-mono max-sm:px-8">Oriental & Tapis Synthétique Frange Dos</h1>
             <p class="lg:mt-12 lg:text-2xl max-sm:text-md text-center max-sm:pt-4 max-sm:px-12">Tout nouveau tapis NC Fringe Graphique magnifique tapis Oriental frange en 15 Style/couleurs choix
               commandes prêt à expédier le 15 Novembre chaud hors des presses ! 5 choix de couleurs : noir, Naturel, Beige, Marron, Ivoire.</p>
               <ul class="text-center mt-3">
@@ -380,10 +380,10 @@
       </div>
 
       <div class="justify-center flex text-center pb-10 lg:mt-24 max-sm:mt-12">
-        <h1 class="font-bold mb-4 text-[44px] max-sm:text-2xl font-mono">Bobines</h1>
+        <h1 class="font-bold mb-2 text-[44px] max-sm:text-2xl font-mono">Bobines</h1>
       </div>
-      <swiper-container class="mySwiper3 lg:px-36 max-sm:pb-10" pagination="true" pagination-clickable="true" space-between="20"
-      slides-per-view="3">
+      <swiper-container class="mySwiper3 lg:px-36 max-sm:mb-12" pagination="true" pagination-clickable="true" space-between="20"
+      slides-per-view="4">
       <swiper-slide class="mySwiper31"><img src="assets/b1.jpg" alt=""></swiper-slide>
       <swiper-slide class="mySwiper31"><img src="assets/b2.jpg" alt=""></swiper-slide>
       <swiper-slide class="mySwiper31"><img src="assets/b3.jpg" alt=""></swiper-slide>
